--- a/themes/restaurant-hugo/layouts/shortcodes/gallery-slider.html
+++ b/themes/restaurant-hugo/layouts/shortcodes/gallery-slider.html
@@ -1,6 +1,8 @@
 {{ $.Scratch.Add "width" (.Get "width" | default "500px") }}
 {{ $.Scratch.Add "height" (.Get "height" | default "300px") }}
 {{ $.Scratch.Add "auto-slide" (.Get "auto-slide" | default "0") }}
+{{ $.Scratch.Add "top" (.Get "top" | default "50%") }}
+{{ $.Scratch.Add "color" (.Get "color" | default "#750000") }}
 
 {{ $.Scratch.Add "arrow-left" (.Get "arrow-left" | default "fa-chevron-left") }}
 {{ $.Scratch.Add "arrow-right" (.Get "arrow-right" | default "fa-chevron-right") }}
@@ -59,9 +61,9 @@
 .nav {
     position: relative;
     z-index: 9;
-    top: 75%;
+    top: {{ $.Scratch.Get "top" }};
     cursor: pointer;
-    color: #750000;
+    color: {{ $.Scratch.Get "color" }};
     opacity: 0.25;
     transition: all 0.66s ease;
     -webkit-transition: all 0.66s ease;
@@ -94,11 +96,15 @@
                 <li class="slide" style="background-image:url({{ $absoluteUrl }});"></li>
             {{- end }} 
         {{- end }}
-    </ol>
+        </ol>
     <span class="nav fa {{ $.Scratch.Get "arrow-left" }} fa-3x" id="left"></span>
     <span class="nav fa {{ $.Scratch.Get "arrow-right" }} fa-3x" id="right"></span>
 </div>
+{{- if eq true (.Get "title") }}
+
+{{- end}}
 </center>
+<br>
 <script>
 sliderJQuery = jQuery.noConflict();
 sliderJQuery(function( $ ) {
