Impact meta tag.

--- a/themes/restaurant-hugo/layouts/partials/head.html
+++ b/themes/restaurant-hugo/layouts/partials/head.html
@@ -73,4 +73,5 @@
   <meta property="og:locale" content="en">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:creator" content="@fronkongames">
+  <meta name='ir-site-verification-token' value='107084795'>
 </head>
