--- a/themes/restaurant-hugo/layouts/shortcodes/video.html
+++ b/themes/restaurant-hugo/layouts/shortcodes/video.html
@@ -3,7 +3,7 @@
 {{ $align := .Get "align" | default "center" }}
 
 <div style="text-align: {{ $align }}">
-  <video autoplay loop muted playsinline decoding="async">
+  <video autoplay loop muted playsinline style="outline:none; width:100%; height:100%;" decoding="async">
     <source src="{{ $src }}" alt="{{ $alt }}" type="video/mp4">
     <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
   </video>
