--- a/themes/restaurant-hugo/layouts/partials/blog.html
+++ b/themes/restaurant-hugo/layouts/partials/blog.html
@@ -22,6 +22,25 @@
               </div>
             </article>
           </div>
+          {{ else if .Params.Links }}
+          <div class="col-lg-6">
+            <article class="post wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
+              <div class="post-img">
+                <img src="{{ .Params.Image | absURL }}" alt="post-image" class="img-responsive">
+              </div>
+              <div class="post-content">
+                <p><h2>{{ .Title }}</h2></p>
+                <p>{{ .Params.Description }}</p>
+                {{ with .Params.Links }}
+                  {{ range . }}
+                    {{ $url := (index . "link") }}
+                    {{ $name := (index . "name") }}
+                    <a href="{{ $url }}">{{ $name }}</a>
+                  {{ end }}
+                {{ end }}
+              </div>
+            </article>
+          </div>
           {{ else }}
           <div class="col-lg-6">
             <article class="post wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
