--- a/layouts/shortcodes/asset-buttons.html
+++ b/layouts/shortcodes/asset-buttons.html
@@ -23,7 +23,7 @@
     {{- end }}
     {{- if .Get "store" -}}    
     &nbsp;&nbsp;&nbsp;
-    <a href="{{ $store }}" class="btn btn-default">🛒 Store</a>
+    <a href="{{ $store }}?aid=1101l9zFC&utm_source=aff" class="btn btn-default">🛒 Store</a>
     {{- else }}
     <a href="" class="btn bt btn-default">🛒 Store (soon!)</a>
     {{- end }}
