White flash fix.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,7 @@
 {{- $.Scratch.Set "breakpoint" (partial "utilities/GetBreakpoint.html") }}
 
 <!doctype html>
-<html lang="{{ .Site.Language.Lang }}" class="no-js">
+<html lang="{{ .Site.Language.Lang }}" class="no-js" data-bs-theme="dark">
     <head>
         {{ block "head" . }}{{ end -}}
     </head>
