--- a/layouts/partials/list/featured.html
+++ b/layouts/partials/list/featured.html
@@ -42,11 +42,11 @@
         <div align="center">
         <a href="mailto:fronkongames@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fa envelope fa-2x" .Pre) )}}</a>
         <a href="https://assetstore.unity.com/publishers/62716" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab fa-unity fa-2x" .Pre) )}}</a>
-        <a href="https://www.linkedin.com/in/martinbr" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab linkedin fa-2x" .Pre) )}}</a>
-        <a href="https://x.com/fronkongames" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab twitter fa-2x" .Pre) )}}</a>
-        <a href="https://www.instagram.com/fronkongames/" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab instagram fa-2x" .Pre) )}}</a>
         <a href="https://github.com/FronkonGames" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab fa-github fa-2x" .Pre) )}}</a>
+        <a href="https://bsky.app/profile/fronkongames.bsky.social" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab bluesky fa-2x" .Pre) )}}</a>
+        <a href="https://x.com/fronkongames" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab x-twitter fa-2x" .Pre) )}}</a>
         <a href="https://www.youtube.com/@fronkongames" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab fa-youtube fa-2x" .Pre) )}}</a>
+        <a href="https://www.linkedin.com/in/martinbr" target="_blank" rel="noopener noreferrer" class="text-decoration-none link-secondary d-inline p-2">{{ partial "assets/icon.html" (dict "icon" (printf "fab linkedin fa-2x" .Pre) )}}</a>
         </div>
         </span>
 
