--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -1,8 +1,8 @@
 <footer class="container-fluid footer text-center p-3">
     <div class="container-xxl text-center">
         <small>
-            {{- $copyright := printf "%s © %s %s %s." (T "copyright") (dateFormat "2006" now) .Site.Title (T "rights") }}
-            {{ cond (gt (len .Site.Copyright) 0) .Site.Copyright $copyright }}
+            {{- $copyright := printf "%s © %s %s" (T "copyright") (dateFormat "2006" now) .Site.Title }}
+            {{ $copyright }}
             {{ .Site.Params.footer.license | safeHTML }}
             {{ if .Site.Params.main.endorse }}
                 {{ $link := partial "assets/link.html" (dict "destination" (index site.Params.links "hinode") "text" "Hinode" "class" "link-bg-footer" "page" .Page) }}
