--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,6 +33,8 @@
 <html lang="{{ .Site.Language.Lang }}" class="no-js" data-bs-theme="dark">
     <head>
         {{ block "head" . }}{{ end -}}
+        <!-- Add custom CSS for animations and effects -->
+        <link rel="stylesheet" href="{{ "css/custom-effects.css" | relURL }}">
     </head>
 
     <body>
@@ -60,19 +62,10 @@
             {{ if not .Site.Params.main.footerBelowFold }}
                 {{ block "main" . }}
                 {{ end -}}
-
-                {{- partial "footer/social.html" . -}}
-                {{- partial "footer/footer.html" . -}}
             {{ end }}
+            
+            <!-- Add custom JS for animations and effects -->
+            <script src="{{ "js/custom-effects.js" | relURL }}"></script>
         </div>
-
-        {{ if .Site.Params.main.footerBelowFold }}
-            {{- partial "footer/social.html" . -}}
-            {{- partial "footer/footer.html" . -}}
-        {{ end }}
-
-        {{- partial "footer/toast-container.html" . -}}
-        {{- partialCached "footer/scripts.html" (dict "header" false "page" . "core" true) }}
-        {{- partial "footer/optional-scripts.html" . -}}
     </body>
 </html>
